# Social_Media_Analytics

./: .gitignore  README.md  main.ipynb  requirements.txt  setup.cfg
src/sma/: run_snscrape.py  sentiment.py  supervised.py  unsupervised.py  utils.py
