[metadata]
name = SocialMediaAnalytics
description = "A package to scrape social media posts from various platforms and perform analytical analysis"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    pandas == 1.3.4
    lxml == 4.7.1
    bs4 == 0.0.1
    snscrape
    ipykernel == 6.13.1
    emoji == 1.7.0
    nltk == 3.7
    tqdm == 4.64.0
    contractions == 0.1.72
    openpyxl == 3.0.10

[options.packages.find]
where = src