[metadata]
name = SocialMediaAnalytics
version = 0.1.0
description = "A package to scrape social media posts from various platforms and perform analytical analysis"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    pandas == 1.3.4
    numpy == 1.21.4
    matplotlib == 3.5.2
    xgboost == 1.6.1
    tqdm == 4.64.0
    nltk == 3.7
    gensim == 4.2.0
    sklearn == 1.1.1
    #snscrape == 0.4.3.20220107.dev8+g7f88678
    snscrape == 0.4.3.20220106
    regex == 2022.6.2
    seaborn == 0.11.2
    lxml == 4.7.1
    emoji == 1.7.0
    contractions == 0.1.72
    unidecode == 1.3.4
    spacy == 3.3.1

[options.packages.find]
where = src